--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="nmedia" translatable="false">NMedia!</string>
     <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
     <string name="description_post_menu" translatable="false">Post menu</string>
-    <string name="_500">500</string>
-    <string name="_5">5</string>
-    <string name="_10">10</string>
-    <string name="likes">likes</string>
+    <string name="_500" translatable="false">500</string>
+    <string name="_5" translatable="false">5</string>
+    <string name="_10" translatable="false">10</string>
+    <string name="likes" translatable="false">likes</string>
 </resources>
