--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="_5" translatable="false">5</string>
     <string name="_10" translatable="false">10</string>
     <string name="likes" translatable="false">likes</string>
+    <string name="shares" translatable="false">shares</string>
+    <string name="views" translatable="false">views</string>
+    <string name="title" translatable="false">Нетология. Университет интернет-профессий будущего</string>
+    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
+
 </resources>
